unpackaged/main/default/objects/zkmulti__ProFormaInvoice__c/zkmulti__ProFormaInvoice__c.object-meta.xml
<CustomObject>
    <label>Pro Forma Invoice</label>
    <nameField>
        <displayFormat>PF-INV-{00000000}</displayFormat>
        <label>Pro Forma Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pro Forma Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>