unpackaged/main/default/objects/zkmulti__ProFormaInvoice__c/fields/zkmulti__TermsOfSale__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TermsOfSale__c</fullName>
    <label>Terms of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost and Freight (CFR)</fullName>
            </value>
            <value>
                <fullName>Carriage Paid TO (CPT)</fullName>
            </value>
            <value>
                <fullName>Cost Insurance and Freight (CIF)</fullName>
            </value>
            <value>
                <fullName>Carriage Insurance Paid (CIP)</fullName>
            </value>
            <value>
                <fullName>Delivered at Place (DAP)</fullName>
            </value>
            <value>
                <fullName>Delivered at Terminal (DAT)</fullName>
            </value>
            <value>
                <fullName>Delivered Duty Paid (DDP)</fullName>
            </value>
            <value>
                <fullName>Delivered Duty Unpaid (DDU)</fullName>
            </value>
            <value>
                <fullName>Ex Works (EXW)</fullName>
            </value>
            <value>
                <fullName>Free On Board (FOB)</fullName>
            </value>
            <value>
                <fullName>Free Carrier (FCA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>